# Tesla-RAG

./: .gitignore  COMPARISON_REPORT.md  Dockerfile  README.md  pyproject.toml  requirements.txt
eval/: report_template.md
eval/datasets/: v1_finance_qa_10.json
eval/prompts/: judge_scaffold_v1.md
results/t2/20260309T073125Z-t2/: metrics.json  summary.md
results/t2/20260309T0825Z-v2-chunk/: metrics.json  summary.md
results/t2/20260309T0853Z-v3-hybrid/: metrics.json  summary.md
results/v1/20260309T073125Z-baseline/: metrics.json  summary.md
results/v1/v1-anthropic-reset/: metrics.json  summary.md
results/v3/v3-hybrid-20260309T154007Z/: metrics.json  summary.md
results/v4/v4-hybrid-bm25w135-20260309T1636Z/: metrics.json  summary.md
results/v5/v5-table-row-alias-20260309T164439Z/: metrics.json  summary.md
results/v6/v6-answer-normalize-20260309T165xZ/: metrics.json  summary.md
results/v7/v7-row-aware-rerank-20260310T0900Z/: metrics.json  summary.md
scripts/: run_eval_v1.sh
src/tesla_rag/: __init__.py  api.py  cli.py  config.py  eval_v1.py  ingest.py  main.py  models.py  service.py  vectorstore.py
tests/: conftest.py  test_api.py  test_ingest.py  test_retrieve.py
