[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesla-rag"
version = "0.1.0"
description = "Baseline RAG over two Tesla PDFs"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "chromadb==0.5.5",
  "sentence-transformers==3.0.1",
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pypdf==4.3.1",
  "pydantic==2.9.2",
  "rank_bm25==0.2.2"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "httpx==0.27.2"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
